kubernetes/homepage/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homepage
spec:
  replicas: 1
  selector:
    matchLabels:
      app: homepage
  template:
    metadata:
      labels:
        app: homepage
    spec:
      volumes:
        - name: data-mount0
          persistentVolumeClaim:
            claimName: homepage-pvc0
      containers:
        - name: homepage
          image: ghcr.io/benphelps/homepage:latest
          ports:
            - containerPort: 3000
          volumeMounts:
            - mountPath: '/app/config'
              name: data-mount0
          resources:
            limits:
              cpu: 500m
              memory: 512Mi
            requests:
              cpu: 250m
              memory: 256Mi
          imagePullPolicy: Always
