kubernetes/homepage/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homepage
  labels:
    app: homepage
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 3000
  selector:
    app: homepage
